instantiateWord() now generates <p> element and appends random word and appropriate classes to element.

--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,15 @@ body, html {
 .left-500{
     left: -500px;
 }
+
+.h-20 {
+    height: 20%;
+}
+
+.h-10 {
+    height: 10%;
+}
+
+.h-70 {
+    height: 70%;
+}
