--- a/styles.css
+++ b/styles.css
@@ -50,3 +50,11 @@ body, html {
     animation: failure 1s;
     animation-timing-function: ease-out;
 }
+
+.infoText {
+    font-size: 1.5rem;
+}
+
+#heading {
+    font-size: 8rem;
+}
